feat: add status codes to Rest JSON response and mock